# esp32Collection

./: README.md
ESP8266/HeltecWifikit8/helloWorld.ino/: helloWorld.ino.ino
ESP8266/basicBlink_nodemcuv32_esp8266.ino/: basicBlink_nodemcuv32_esp8266.ino.ino
agenticCodingTest/: CMakeLists.txt  README.md  build_flash.sh  device.md  partitions.csv  plan.md  sdkconfig.defaults  shooter.md  vision.md
agenticCodingTest/docs/: architecture.md  codereview0.md  ideas.md
agenticCodingTest/documents/: agents.md  monster_photographer_game.md
agenticCodingTest/main/: CMakeLists.txt  app_main.c  board_config.c  board_config.h  button_input.c  button_input.h  demo_game.c  demo_game.h  display_smoke_test.c  display_smoke_test.h  font_5x7.h  game_loop.c  game_loop.h  graphics.c  graphics.h  monster_game.c  monster_game.h  monster_sprites.h  shooter_game.c  shooter_game.h  shooter_sprites.h  st7789_display.c  st7789_display.h
basicHumidity_DHT/: basicHumidity_DHT.ino
esp32cam/: .clang-format  .cppcheck-suppress  .gitignore  CMakeLists.txt  README.md  esp32cam_model.md  localPipeline.sh  sdkconfig.defaults
esp32cam/main/: CMakeLists.txt  camera.c  camera.h  idf_component.yml  index.html  main.c  stream.c  stream.h  web.c  web.h
humidity/basicHumidity_DHT/: basicHumidity_DHT.ino
max7219_basic/: max7219_basic.ino
max7219_led.example/: max7219_led.example.ino
randomReviewer/: randomReviewer.ino
wifi_led.example/: wifi_led.example.ino
yl69_test/: yl69_test.ino
