idf_component_register(SRCS "app_main.c"
                            "board_config.c"
                            "button_input.c"
                            "display_smoke_test.c"
                            "game_loop.c"
                            "st7789_display.c"
                       INCLUDE_DIRS ".")
