idf_component_register(SRCS "app_main.c"
                            "board_config.c"
                            "button_input.c"
                            "game_loop.c"
                            "graphics.c"
                            "monster_game.c"
                            "st7789_display.c"
                       INCLUDE_DIRS ".")
